--- a/index.html
+++ b/index.html
@@ -3,181 +3,250 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  
-  <!-- TITULO DE LA WEB-->
-  <title>Portafolio</title>
-  
-  <!--CSS-->
+  <meta name="description" content="Frontend developer en formación. Portafolio con proyectos, entregables y enfoque en UI, accesibilidad y performance.">
+  <title>Portafolio | Alexis Carrera</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
   <link rel="stylesheet" href="./css/style.css">
-  <!--Bootstrap CSS-->
- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
- <!-- Bootstrap Icons (Para iconos flotantes y UI) -->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
-
 </head>
-<body>
+<body data-bs-theme="dark">
+
   <header>
-    <!-- NAVBAR -->
-    <nav>
-      <ul>
-        <li><a href="#inicio">Inicio</a></li>
-        <li><a href="#sobre-mi">Sobre mí</a></li>
-        <li><a href="#proyectos">Proyectos</a></li>
-        <li><a href="#contacto">Contacto</a></li>
-      </ul>
+    <nav class="navbar navbar-expand-lg fixed-top transition-all" id="mainNavbar">
+      <div class="container">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
+          <ul class="navbar-nav gap-4">
+            <li class="nav-item">
+              <a class="nav-link active" href="#inicio">Inicio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#sobre-mi">Sobre mí</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#Roadmap">Roadmap</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#contacto">Contacto</a>
+            </li>
+          </ul>
+        </div>
+      </div>
     </nav>
   </header>
-  <!-- HERO -->
+
   <main>
-    <section id="inicio" class="hero-section">
-  <h1>Welcome</h1>
-  <p>Diseño interfaces con foco en la experiencia del usuario, creando productos digitales que sean intuitivos, accesibles y visualmente atractivos.</p>
-  <a href="#contacto" class="btn">Contáctame</a>
-  <a href="#Roadmap" class="btn">Ver Roadmap</a>
-  <img src="./Img/backgraund_inicio.png" alt="Imagen de portada" class="hero-image">
-</section>
-
-    <section id="sobre-mi">
-      <div class="container">
-      <h2 class="section-title">Sobre mí</h2>
-      <p class="section-description">Soy Alexis Carrera, Frontend en formación con mentalidad de producto. Busco que cada sección tenga una intención clara: jerarquía visual, lectura rápida y estilos escalables.
-       Busco crear interfaces limpias, accesibles y rápidas, con foco en la experiencia del usuario.</p>
-       <img src="./Img/retrato.png" alt="Foto de Alexis Carrera" width="720" height="960">
-      </div>
-    </section>
-
-    <section id="Roadmap">
-        <h2>Road Map</h2>
-        <p>Progreso actual en mi aprendizaje:</p>
-        <div class="cards-3">
-          <article class="card glass">
-            <h3>Hoy</h3>
-            <p>Conocimientos basicos en desarollo web.</p>
-            <ul class="roadmap-list">
-              <li>HTML</li>
-              <li>CSS</li>
-              <li>Testing QA Manual</li>
-            </ul>
-            <!--Entregables-->
-            <div class="entregablesglass">
-              <h4>Entregables para Coder</h4>
-              <div class="entregables-list">
-                <a class="chip" href="https://nahuelalexiscarrera.github.io/entregafinal.carreranahuelalexis/" target="_blank">Entrega final Módulo 1</a>
-                <a class="chip" href="https://drive.google.com/file/d/10rud0YdnpmRIcgZcKETwR6K46hBv3pm9/view?usp=sharing" target="_blank">Testing QA Manual</a>
-              </div>
-            </div>
-          </article>
-          <article class="card glass">
-          <h3>En proceso</h3>
-          <p>Interaccion y logica.</p>
-          <ul class="roadmap-list">
-            <li>JavaScript</li>
-            <li>Python</li>
-            <li>Manejo de prompt</li>
-          </ul>
-          </article>
-          <article class="card glass">
-            <h3>Proximo</h3>
-            <p>construccion de apps.</p>
-            <ul class="roadmap-list">
-              <li>React</li>
-              <li>Node.js</li>
-              <li>SQL/NoSQL</li>
-            </ul>
-          </article>
+    <section id="inicio" class="hero-section d-flex align-items-center justify-content-center text-center">
+      <div class="hero-bg"></div> 
+      <div class="container hero-content">
+        <h1 class="display-3 fw-bold animate-up">Welcome</h1>
+        <p class="lead mb-4 animate-up delay-1">Diseño interfaces con foco en la experiencia del usuario, creando productos digitales intuitivos, accesibles y atractivos.</p>
+        <div class="d-flex justify-content-center gap-3 animate-up delay-2">
+            <a href="#contacto" class="btn btn-primary-custom">Contáctame</a>
+            <a href="#proyectos" class="btn btn-outline-light">Ver Proyectos</a>
         </div>
+      </div>
     </section>
-    <section id="contacto">
-  <div class="container">
-    <h2 class="section-title">Contacto</h2>
-    <p class="section-subtitle">Escribime y coordinamos.</p>
 
-    <form id="contactForm" class="glass contact-form">
-      <div class="field">
-        <label for="name">Nombre</label>
-        <input id="name" name="name" type="text" autocomplete="name" required />
+    <section id="sobre-mi" class="section-padding">
+      <div class="container">
+        <div class="about-grid">
+          <div class="about-text">
+            <h2 class="section-title">Sobre mí</h2>
+            <p class="section-description">
+              Soy Alexis Carrera, Frontend en formación con mentalidad de producto. 
+              Busco que cada sección tenga una intención clara: <strong>jerarquía visual</strong>, <strong>lectura rápida</strong> y estilos escalables.
+              <br><br>
+              Me especializo en crear interfaces limpias, accesibles y rápidas, poniendo siempre al usuario en el centro del desarrollo.
+            </p>
+          </div>
+          <div class="about-image-container">
+            <img src="./Img/retrato.png" alt="Foto de Alexis Carrera" class="img-fluid portrait">
+            <div class="image-caption">
+                <span>Frontend Developer</span>
+            </div>
+          </div>
+        </div>
       </div>
+    </section>
 
-      <div class="field">
-        <label for="email">Email</label>
-        <input id="email" name="email" type="email" autocomplete="email" required />
+ <!-- PROYECTOS -->
+ <section id="proyectos" class="section-padding" aria-label="Proyectos">
+   <div class="container">
+     <div class="section-head text-center">
+       <h2 class="section-title">Proyectos</h2>
+       <p class="section-lead">
+        De momentos pocos pero reales, enfoque en calidad por sobre cantidad. Cada proyecto refleja mi compromiso con el diseño centrado en el usuario, la accesibilidad y el rendimiento.
+       </p>
+     </div>
+     <div class="row g-4 reveal">
+       <div class="col-lg-6">
+         <article class="p-card glass">
+           <header class="p-card__head">
+             <h3 class="p-card__title">Taberna calavera</h3>
+             <p class="p-card__meta">HTML · CSS · Responsive · Deploy</p>
+           </header>
+           <p class="p-card__desc">
+             Sitio web para comunidad de juegos de rol. Enfocado en diseño limpio, navegación intuitiva y adaptabilidad a dispositivos móviles.
+           </p>
+           <div class="p-card__links">
+             <a class="chip" target="_blank" rel="noopener noreferrer"
+                href="https://nahuelalexiscarrera.github.io/entregafinal.carreranahuelalexis/">
+               Repocitorio (GitHub Pages)
+             </a>
+           </div>
+         </article>
+       </div>
+       </div>
+     </div>
+   </div>
+ </section>
+
+    <section id="Roadmap" class="section-padding">
+      <div class="container">
+        <h2 class="section-title text-center mb-5">Road Map</h2>
+        <div class="row g-4">
+            <div class="col-md-4">
+                <article class="card glass h-100 p-4">
+                    <h3>Hoy</h3>
+                    <p class="text-muted">Conocimientos básicos en desarrollo web.</p>
+                    <ul class="roadmap-list">
+                        <li>HTML5 & Semantic</li>
+                        <li>CSS3 & Flexbox/Grid</li>
+                        <li>Testing QA Manual</li>
+                    </ul>
+                </article>
+            </div>
+            <div class="col-md-4">
+                <article class="card glass h-100 p-4">
+                    <h3>En proceso</h3>
+                    <p class="text-muted">Interacción y lógica.</p>
+                    <ul class="roadmap-list">
+                        <li>JavaScript ES6+</li>
+                        <li>Python Basics</li>
+                        <li>Prompt Engineering</li>
+                    </ul>
+                </article>
+            </div>
+            <div class="col-md-4">
+                <article class="card glass h-100 p-4">
+                    <h3>Próximo</h3>
+                    <p class="text-muted">Construcción de Apps.</p>
+                    <ul class="roadmap-list">
+                        <li>React.js</li>
+                        <li>Node.js</li>
+                        <li>Bases de datos (SQL)</li>
+                    </ul>
+                </article>
+            </div>
+        </div>
       </div>
+    </section>
 
-      <div class="field">
-        <label for="subject">Asunto</label>
-        <input id="subject" name="subject" type="text" required />
+    <section id="contacto" class="section-padding">
+      <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-lg-8">
+                <h2 class="section-title text-center">Contacto</h2>
+                <p class="text-center mb-5">Escribime y coordinamos.</p>
+                <div class="contact-top">
+    <p class="contact-email">
+    <span class="text-muted">Email:</span>
+    <a class="contact-email__link" href="mailto:nahuel.alexis.carrera@gmail.com">nahuel.alexis.carrera@gmail.com
+  </p>
+  <button class="btn btn-outline-light btn-sm" id="copyEmail" type="button">Copiar email</button>
+    </div>
+
+                <form id="contactForm" class="glass contact-form p-5">
+                    
+                  <div class="mb-3">
+                    <label for="name" class="form-label">Nombre</label>
+                    <input id="name" name="name" type="text" class="form-control" required />
+                  </div>
+
+                  <div class="mb-3">
+                    <label for="email" class="form-label">Email</label>
+                    <input id="email" name="email" type="email" class="form-control" required />
+                  </div>
+
+                  <div class="mb-3">
+                    <label for="subject" class="form-label">Asunto</label>
+                    <input id="subject" name="subject" type="text" class="form-control" required />
+                  </div>
+
+                  <div class="mb-3">
+                    <label for="message" class="form-label">Mensaje</label>
+                    <textarea id="message" name="message" rows="5" class="form-control" required></textarea>
+                  </div>
+
+                  <button class="btn btn-primary-custom w-100" type="submit">Enviar Mensaje</button>
+                  <p id="formNote" class="form-note mt-3 text-center text-muted small"></p>
+                </form>
+            </div>
+        </div>
       </div>
+    </section>
 
-      <div class="field">
-        <label for="message">Mensaje</label>
-        <textarea id="message" name="message" rows="6" required></textarea>
+    <aside class="social-sidebar">
+      <a href="https://www.linkedin.com/in/nahuel-alexis-carrera-16619b35a/" target="_blank" class="social-icon-link" aria-label="LinkedIn">
+        <i class="bi bi-linkedin"></i>
+      </a>
+      <a href="https://github.com/nahuelalexiscarrera" target="_blank" class="social-icon-link" aria-label="GitHub">
+        <i class="bi bi-github"></i>
+      </a>
+      <a href="https://wa.me/+5493518142686" target="_blank" class="social-icon-link" aria-label="WhatsApp">
+        <i class="bi bi-whatsapp"></i>
+      </a>
+    </aside>
+
+    <footer class="text-center py-5 border-top border-secondary">
+      <div class="container">
+        
+        <div class="d-flex justify-content-center gap-4 mb-4 footer-socials">
+            <a href="https://www.linkedin.com/in/nahuel-alexis-carrera/" target="_blank" class="footer-icon" title="LinkedIn">
+                <i class="bi bi-linkedin"></i>
+            </a>
+            <a href="https://github.com/NahuelAlexisCarrera" target="_blank" class="footer-icon" title="GitHub">
+                <i class="bi bi-github"></i>
+            </a>
+            <a href="https://wa.me/5491123456789" target="_blank" class="footer-icon" title="WhatsApp">
+                <i class="bi bi-whatsapp"></i>
+            </a>
+        </div>
+
+        <p class="m-0 text-muted">&copy; <span id="year"></span> Alexis Carrera — Frontend Portfolio</p>
       </div>
+    </footer>
+  </main>
 
-      <button class="btn btn-primary" type="submit">Enviar</button>
-      <p id="formNote" class="form-note" aria-live="polite"></p>
-    </form>
-  </div>
-</section>
-
-<section class="iconflotantes" aria-label="redes sociales">
-  <a href="https://www.linkedin.com/in/nahuel-alexis-carrera/" target="_blank" rel="noopener noreferrer">
-    <img src="./Img/linkedin_5968991.png" alt="LinkedIn" class="social-icon">
-  </a>
-
-  <a href="https://github.com/NahuelAlexisCarrera" target="_blank" rel="noopener noreferrer">
-    <img src="./Img/github_5968896.png" alt="GitHub" class="social-icon">
-  </a>
-
-  <a href="https://wa.me/5491123456789" target="_blank" rel="noopener noreferrer">
-    <img src="./Img/whatsapp_5969035.png" alt="WhatsApp" class="social-icon">
-  </a>
-</section>
-
-
-<footer>
-  <div class="container">
-    <p>&copy; <span id="year">2026</span> Alexis Carrera — Frontend Portfolio</p>
-  </div>
-</footer>
-</main>
-<!--Scrip automatizador de año footer-->
-<script>
-  const currentYear = new Date().getFullYear();
-  document.getElementById("year").textContent = currentYear;
-</script>
-<!-- JavaScript para manejar el formulario de contacto -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <script>
-  const TO_EMAIL = "nahuel.alexis.carrera@gmail.com";
+    document.getElementById("year").textContent = new Date().getFullYear();
 
-  document.getElementById("contactForm").addEventListener("submit", (e) => {
-    e.preventDefault();
+    window.addEventListener("scroll", function() {
+        const nav = document.getElementById("mainNavbar");
+        if (window.scrollY > 50) {
+            nav.classList.add("scrolled");
+        } else {
+            nav.classList.remove("scrolled");
+        }
+    });
 
-    const name = document.getElementById("name").value.trim();
-    const email = document.getElementById("email").value.trim();
-    const subject = document.getElementById("subject").value.trim();
-    const message = document.getElementById("message").value.trim();
-
-    const body =
-`Nombre: ${name}
-Email: ${email}
-
-${message}`;
-
-    const mailto =
-      `mailto:${encodeURIComponent(TO_EMAIL)}` +
-      `?subject=${encodeURIComponent(subject)}` +
-      `&body=${encodeURIComponent(body)}`;
-
-    window.location.href = mailto;
-
-    document.getElementById("formNote").textContent =
-      "Se abrirá tu aplicación de correo para enviar el mensaje.";
-  });
-</script>
-
-  
-  
-  
+    const TO_EMAIL = "nahuel.alexis.carrera@gmail.com";
+    document.getElementById("contactForm").addEventListener("submit", (e) => {
+      e.preventDefault();
+      const name = document.getElementById("name").value.trim();
+      const email = document.getElementById("email").value.trim();
+      const subject = document.getElementById("subject").value.trim();
+      const message = document.getElementById("message").value.trim();
+      const body = `Nombre: ${name}\nEmail: ${email}\n\n${message}`;
+      const mailto = `mailto:${encodeURIComponent(TO_EMAIL)}?subject=${encodeURIComponent(subject)}&body=${encodeURIComponent(body)}`;
+      window.location.href = mailto;
+      document.getElementById("formNote").textContent = "Se abrirá tu aplicación de correo para enviar el mensaje.";
+    });
+  </script>
 </body>
 </html>
