--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             </p>
           </div>
           <div class="about-image-container">
-            <img src="./Img/retrato.png" alt="Foto de Alexis Carrera" class="img-fluid portrait">
+            <img src="./img/retrato.png" alt="Foto de Alexis Carrera" class="img-fluid portrait">
             <div class="image-caption">
                 <span>Frontend Developer</span>
             </div>
